tests/typechecking/valid/with-equation/basic-let-neg.ml
let x = -4 in print_int x
