tests/typechecking/invalid/int out Ofboundry MT 10digits.ml
let x = 11111111111 in print_int x
